[gd_scene load_steps=19 format=4 uid="uid://b1s3e8t42u1x7"]

[ext_resource type="Script" path="res://scripts/camera_2d.gd" id="1_f82oe"]
[ext_resource type="Script" path="res://scripts/hud_controller.gd" id="1_h62xt"]
[ext_resource type="PackedScene" uid="uid://c6ljjcd417jfl" path="res://Scenes/water_body.tscn" id="2_wlpvq"]
[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="3_bk6wc"]
[ext_resource type="Script" path="res://scripts/pause_water_body.gd" id="4_efg27"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="5_55a05"]
[ext_resource type="Script" path="res://smooth_path_modified.gd" id="5_hws0d"]
[ext_resource type="TileSet" uid="uid://dviwanbgwa8r1" path="res://Assets/simple_tileset.tres" id="6_sy7m1"]
[ext_resource type="Material" uid="uid://bwvi4cdplo4o3" path="res://Assets/new_shader_material.tres" id="6_wmd6h"]
[ext_resource type="PackedScene" uid="uid://cauov1k6277t4" path="res://Scenes/level_resources/refill_zone.tscn" id="7_cm1f2"]
[ext_resource type="PackedScene" uid="uid://bgbb4iehdspj4" path="res://Scenes/finish_zone.tscn" id="9_sombl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kpooi"]

[sub_resource type="QuadMesh" id="QuadMesh_l3ssb"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_16smo"]

[sub_resource type="Curve2D" id="Curve2D_1ura5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q0k5c"]

[sub_resource type="Curve2D" id="Curve2D_5qq3h"]

[sub_resource type="SphereMesh" id="SphereMesh_u7vog"]

[node name="SampleLevel_0" type="Node"]
script = ExtResource("1_h62xt")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 3

[node name="Button" type="Button" parent="HUD"]
offset_left = 1040.0
offset_top = 2.0
offset_right = 1143.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_kpooi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kpooi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kpooi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kpooi")
text = "||"
metadata/_edit_use_anchors_ = true

[node name="PauseScreen" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="pause_screen" parent="PauseScreen" instance=ExtResource("2_wlpvq")]
script = ExtResource("3_bk6wc")

[node name="mesh" type="MeshInstance2D" parent="PauseScreen/pause_screen"]
modulate = Color(0, 0, 0, 1)
position = Vector2(875, 171)
rotation = 0.349066
scale = Vector2(48.332, 49.4919)
mesh = SubResource("QuadMesh_l3ssb")

[node name="pause_water_body" parent="PauseScreen/pause_screen" instance=ExtResource("2_wlpvq")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.92549)
position = Vector2(-11, 178)
script = ExtResource("4_efg27")
color = Color(0, 0, 0, 1)
max_wave_height = 0.5
spring_number = 40
border_thickness = 1.1

[node name="water_border" type="Path2D" parent="PauseScreen/pause_screen/pause_water_body"]
modulate = Color(1, 1, 1, 0.92549)
clip_children = 2
material = SubResource("CanvasItemMaterial_16smo")
curve = SubResource("Curve2D_1ura5")
script = ExtResource("5_hws0d")
spline_length = 5.0
_smooth = true
color = Color(0.0117647, 0.027451, 0.0862745, 1)

[node name="Label" type="Label" parent="PauseScreen/pause_screen"]
offset_left = 89.0
offset_top = 30.0
offset_right = 475.0
offset_bottom = 167.0
theme_override_font_sizes/font_size = 100
text = "PAUSED"

[node name="mesh_movement_timer" type="Timer" parent="PauseScreen/pause_screen"]
wait_time = 6.0

[node name="continue" type="Button" parent="PauseScreen/pause_screen"]
offset_left = 183.0
offset_top = 230.0
offset_right = 483.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 50
text = "CONTINUE"
autowrap_mode = 2

[node name="restart" type="Button" parent="PauseScreen/pause_screen"]
offset_left = 183.0
offset_top = 347.0
offset_right = 483.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 50
text = "RESTART"
autowrap_mode = 2

[node name="level_select" type="Button" parent="PauseScreen/pause_screen"]
offset_left = 132.0
offset_top = 459.0
offset_right = 482.0
offset_bottom = 544.0
theme_override_font_sizes/font_size = 50
text = "LEVEL SELECT"
autowrap_mode = 2

[node name="GameOverScreen" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
material = ExtResource("6_wmd6h")
offset_right = 1150.0
offset_bottom = 650.0

[node name="GameOver" type="Label" parent="GameOverScreen"]
offset_left = 328.0
offset_top = 56.0
offset_right = 1016.0
offset_bottom = 221.0
rotation = 0.514872
theme_override_font_sizes/font_size = 120
text = "GAME OVER"

[node name="water_body" parent="GameOverScreen" instance=ExtResource("2_wlpvq")]
unique_name_in_owner = true
position = Vector2(0, -4)
rotation = 0.514872
script = ExtResource("4_efg27")
color = Color(0.34, 0.0204, 0.0204, 0.870588)
max_wave_height = 0.5
spring_number = 70
border_thickness = 1.1
depth = 580

[node name="water_border" type="Path2D" parent="GameOverScreen/water_body"]
clip_children = 2
material = SubResource("CanvasItemMaterial_q0k5c")
curve = SubResource("Curve2D_5qq3h")
script = ExtResource("5_hws0d")
spline_length = 5.0
_smooth = true
color = Color(0.341176, 0.0196078, 0.0196078, 0.870588)

[node name="replay" type="Button" parent="GameOverScreen"]
offset_left = 176.0
offset_top = 224.0
offset_right = 356.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 50
text = "RETRY"
autowrap_mode = 2

[node name="level_select" type="Button" parent="GameOverScreen"]
offset_left = 224.0
offset_top = 344.0
offset_right = 574.0
offset_bottom = 429.0
theme_override_font_sizes/font_size = 50
text = "LEVEL SELECT"
autowrap_mode = 2

[node name="main_menu" type="Button" parent="GameOverScreen"]
offset_left = 448.0
offset_top = 456.0
offset_right = 768.0
offset_bottom = 541.0
theme_override_font_sizes/font_size = 50
text = "MAIN MENU"
autowrap_mode = 2

[node name="level_complete" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="replay" type="Button" parent="level_complete"]
offset_left = 888.0
offset_top = 360.0
offset_right = 1098.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 50
text = "REPLAY"
autowrap_mode = 2

[node name="next_level" type="Button" parent="level_complete"]
offset_left = 800.0
offset_top = 232.0
offset_right = 1100.0
offset_bottom = 317.0
scale = Vector2(0.997334, 0.980356)
theme_override_font_sizes/font_size = 50
text = "NEXT LEVEL"
autowrap_mode = 2

[node name="level_select" type="Button" parent="level_complete"]
offset_left = 752.0
offset_top = 496.0
offset_right = 1102.0
offset_bottom = 581.0
theme_override_font_sizes/font_size = 50
text = "LEVEL SELECT"
autowrap_mode = 2

[node name="level" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="level"]
ignore_rotation = false
zoom = Vector2(1.5, 1.5)
rotation_smoothing_enabled = true
script = ExtResource("1_f82oe")

[node name="GameManger" type="Node2D" parent="level" node_paths=PackedStringArray("camera_2d")]
script = ExtResource("5_55a05")
camera_2d = NodePath("../Camera2D")

[node name="refill_timer" type="Timer" parent="level/GameManger"]

[node name="restart_timer" type="Timer" parent="level/GameManger"]
one_shot = true

[node name="decor" type="MeshInstance2D" parent="level"]
modulate = Color(0.187176, 0.187176, 0.187176, 1)
position = Vector2(411, 17)
rotation = -1.34172
scale = Vector2(490.105, 159.909)
mesh = SubResource("SphereMesh_u7vog")

[node name="TileMapLayer" type="TileMapLayer" parent="level" groups=["ground"]]
tile_map_data = PackedByteArray("AAAmAAAAAwABAAAAAAAnAAAAAwABAAAAAAAoAAAAAwABAAAAAAApAAAAAwABAAAAAAAqAAAAAwABAAAAAAArAAAAAwABAAAAAAAsAAAAAwABAAAAAAAtAAAAAwABAAAAAAAuAAAAAwABAAAAAAAvAAAAAwABAAAAAAAwAAAAAwABAAAAAAAxAAAAAwABAAAAAAAyAAAAAwABAAAAAAAzAAAAAwABAAAAAAA0AAAAAwABAAAAAAA1AAAAAwABAAAAAAA2AAAAAwABAAAAAAA3AAAAAwABAAAAAAA4AAAAAwABAAAAAAA5AAAAAwABAAAAAAA6AAAAAwABAAAAAAA7AAAAAwABAAAAAAA8AAAAAwABAAAAAAA9AAAAAwABAAAAAAA+AAAAAwABAAAAAAA/AAAAAwABAAAAAABAAAAAAwABAAAAAABBAAAAAwABAAAAAABCAAAAAwABAAAAAABDAAAAAwABAAAAAABEAAAAAwABAAAAAABFAAAAAwABAAAAAABGAAAAAwABAAAAAABHAAAAAwABAAAAAABIAAAAAwABAAAAAABJAAAAAwABAAAAAABKAAAAAwABAAAAAABLAAAAAwABAAAAAABMAAAAAwABAAAAAABNAAAAAwABAAAAAABOAAAAAwABAAAAAABPAAAAAwABAAAAAABQAAAAAwABAAAAAABRAAAAAwABAAAAAABSAAAAAwABAAAAAABTAAAAAwABAAAAAABUAAAAAwABAAAAAABVAAAAAwABAAAAAABWAAAAAwABAAAAAABXAAAAAwABAAAAAABYAAAAAwABAAAAAABZAAAAAwABAAAAAABaAAAAAwABAAAAAABbAAAAAwABAAAAAABcAAAAAwABAAAAAABdAAAAAwABAAAAAABeAAAAAwABAAAAAABfAAAAAwABAAAAAABgAAAAAwABAAAAAABhAAAAAwABAAAAAABiAAAAAwABAAAAAABjAAAAAwABAAAAAABkAAAAAwABAAAAAABlAAAAAwABAAAAAABmAAAAAwABAAAAAABnAAAAAwABAAAAAABoAAAAAwABAAAAAABpAAAAAwABAAAAAABqAAAAAwABAAAAAABrAAAAAwABAAAAAABsAAAAAwABAAAAAABtAAAAAwABAAAAAABuAAAAAwABAAAAAABvAAAAAwABAAAAAABwAAAAAwABAAAAAABxAAAAAwABAAAAAAByAAAAAwABAAAAAABzAAAAAwABAAAAAAB0AAAAAwABAAAAAAB1AAAAAwABAAAAAAB2AAAAAwABAAAAAAB3AAAAAwABAAAAAAB4AAAAAwABAAAAAAB5AAAAAwABAAAAAAB6AAAAAwABAAAAAAB7AAAAAwABAAAAAAB8AAAAAwABAAAAAAB9AAAAAwABAAAAAAB+AAAAAwABAAAAAAB/AAAAAwABAAAAAACAAAAAAwABAAAAAACBAAAAAwABAAAAAACCAAAAAwABAAAAAACDAAAAAwABAAAAAACEAAAAAwABAAAAAACFAAAAAwABAAAAAACGAAAAAwABAAAAAACHAAAAAwABAAAAAACIAAAAAwABAAAAAACJAAAAAwABAAAAAACKAAAAAwABAAAAAACLAAAAAwABAAAAAACMAAAAAwABAAAAAACNAAAAAwABAAAAAACOAAAAAwABAAAAAACPAAAAAwABAAAAAACQAAAAAwABAAAAAACRAAAAAwABAAAAAACSAAAAAwABAAAAAACTAAAAAwABAAAAAACUAAAAAwABAAAAAACVAAAAAwABAAAAAACWAAAAAwABAAAAAACXAAAAAwABAAAAAACYAAAAAwABAAAAAACZAAAAAwABAAAAAACaAAAAAwABAAAAAACbAAAAAwABAAAAAACcAAAAAwABAAAAAACdAAAAAwABAAAAAACeAAAAAwABAAAAAACfAAAAAwABAAAAAACgAAAAAwABAAAAAAChAAAAAwABAAAAAACiAAAAAwABAAAAAACjAAAAAwABAAAAAACkAAAAAwABAAAAAAClAAAAAwABAAAAAACmAAAAAwABAAAAAACnAAAAAwABAAAAAACoAAAAAwABAAAAAACpAAAAAwABAAAAAADc/wAAAwABAAAAAADd/wAAAwABAAAAAADe/wAAAwABAAAAAADf/wAAAwABAAAAAADg/wAAAwABAAAAAADh/wAAAwABAAAAAADi/wAAAwABAAAAAADj/wAAAwABAAAAAADk/wAAAwABAAAAAADl/wAAAwABAAAAAADm/wAAAwABAAAAAADn/wAAAwABAAAAAADo/wAAAwABAAAAAADp/wAAAwABAAAAAADq/wAAAwABAAAAAADr/wAAAwABAAAAAADs/wAAAwABAAAAAADt/wAAAwABAAAAAADu/wAAAwABAAAAAADv/wAAAwABAAAAAADw/wAAAwABAAAAAADx/wAAAwABAAAAAADy/wAAAwABAAAAAADz/wAAAwABAAAAAAD0/wAAAwABAAAAAAD1/wAAAwABAAAAAAD2/wAAAwABAAAAAAD3/wAAAwABAAAAAAD4/wAAAwABAAAAAAD5/wAAAwABAAAAAAD6/wAAAwABAAAAAAD7/wAAAwABAAAAAAD8/wAAAwABAAAAAAD9/wAAAwABAAAAAAD+/wAAAwABAAAAAAD//wAAAwABAAAAAAAAAAAAAwABAAAAAAABAAAAAwABAAAAAAACAAAAAwABAAAAAAADAAAAAwABAAAAAAAEAAAAAwABAAAAAAAFAAAAAwABAAAAAAAGAAAAAwABAAAAAAAHAAAAAwABAAAAAAAIAAAAAwABAAAAAAAJAAAAAwABAAAAAAAKAAAAAwABAAAAAAALAAAAAwABAAAAAAAMAAAAAwABAAAAAAANAAAAAwABAAAAAAAOAAAAAwABAAAAAAAPAAAAAwABAAAAAAAQAAAAAwABAAAAAAARAAAAAwABAAAAAAASAAAAAwABAAAAAAATAAAAAwABAAAAAAAUAAAAAwABAAAAAAAVAAAAAwABAAAAAAAWAAAAAwABAAAAAAAXAAAAAwABAAAAAAAYAAAAAwABAAAAAAAZAAAAAwABAAAAAAAaAAAAAwABAAAAAAAbAAAAAwABAAAAAAAcAAAAAwABAAAAAAAdAAAAAwABAAAAAAAeAAAAAwABAAAAAAAfAAAAAwABAAAAAAAgAAAAAwABAAAAAAAhAAAAAwABAAAAAAAiAAAAAwABAAAAAAAjAAAAAwABAAAAAAAkAAAAAwABAAAAAAAlAP//AwAAAAAAAAAlAP7/AwAAAAAAAAD+////AwAAAAAAAAAWAP//AwAAAAAAAAA=")
tile_set = ExtResource("6_sy7m1")

[node name="RefillZone" parent="level" instance=ExtResource("7_cm1f2")]
position = Vector2(-104, -269)

[node name="Finish_Zone" parent="level" instance=ExtResource("9_sombl")]
position = Vector2(433, -22)

[connection signal="pressed" from="HUD/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="PauseScreen/pause_screen/mesh_movement_timer" to="PauseScreen/pause_screen" method="_on_mesh_movement_timer_timeout"]
[connection signal="pressed" from="PauseScreen/pause_screen/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseScreen/pause_screen/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseScreen/pause_screen/level_select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="GameOverScreen/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="GameOverScreen/level_select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="GameOverScreen/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="level_complete/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="level_complete/next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="level_complete/level_select" to="." method="_on_level_select_pressed"]
[connection signal="timeout" from="level/GameManger/refill_timer" to="level/GameManger" method="_on_refill_timer_timeout"]
[connection signal="timeout" from="level/GameManger/restart_timer" to="level/GameManger" method="_on_restart_timer_timeout"]
